# marksad

./: Cargo.toml  README.md
src/: decoder.rs  encoder.rs  error.rs  lib.rs  line_reader.rs  md.rs  reader.rs  result.rs  warning.rs
src/decode/: error.rs  mod.rs  result.rs  warning.rs
src/encode/: error.rs  mod.rs  result.rs
src/html/: mod.rs
tests/: parsing.rs  to_html.rs
tests/data/: ALL_HEADINGS.md  HEADINGS.md  HEADINGS_LEADING_NEWLINE.md  HEADINGS_LEADING_NEWLINES.md  MULTILINE.md  MULTILINE_PARAGRAPHS.md  PARAGRAPHS_LEADING_NEWLINE.md  PARAGRAPHS_LEADING_NEWLINES.md  test.html
