[package]
name = "marksad"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR BSL-1.0 OR MIT"
documentation = "https://docs.rs/marksad"
homepage = "https://docs.rs/crate/marksad"
repository = "https://github.com/AldaronLau/marksad"
readme = "README.md"
description = "Markdown parser library with all the extensions"
keywords = ["user", "username", "whoami", "platform", "detect"]
categories = [
    "os",
    "wasm",
    "internationalization",
    "localization",
    "value-formatting",
]
include = [
    "/LICENSE_APACHE",
    "/LICENSE_BOOST",
    "/LICENSE_MIT",
    "/README.md",
    "/src/*",
]
rust-version = "1.77"

[dependencies]
